feat: use diff-so-fancy for the git diff

--- a/hammers/brew/brewfile.org
+++ b/hammers/brew/brewfile.org
@@ -83,6 +83,7 @@
       ## network
       brew 'inetutils' if OS.mac?
       brew 'coreutils' if OS.mac?
+      brew 'diff-so-fancy'
       brew 'nmap', greedy: true
       brew 'axel' # multiple thread downloader
       brew 'iperf'
