feat: use delta as git pager and view tool

--- a/hammers/git/config.org
+++ b/hammers/git/config.org
@@ -39,7 +39,7 @@
       [core]
               ignorecase = false
               quotepath = false
-              pager = diff-so-fancy | less --tabs=4 -RFX
+              pager = delta
               whitespace = -trailing-space
               editor = vim
       [color]
@@ -70,12 +70,29 @@
               helper = store --file ~/.local/share/git/credentials
               helper = cache --timeout 30000
       [interactive]
-              diffFilter = diff-so-fancy --patch
-      [color "diff-highlight"]
-              oldNormal = red bold
-              oldHighlight = red bold 52
-              newNormal = green bold
-              newHighlight = green bold 22
+              diffFilter = delta --color-only
+      [merge]
+              conflictstyle = diff3
+      [diff]
+              colorMoved = default
+      [delta]
+              navigate = true  # use n and N to move between diff sections
+              features = side-by-side line-numbers decorations
+              syntax-theme = Dracula
+              plus-style = syntax "#003800"
+              minus-style = syntax "#3f0001"
+
+      [delta "decorations"]
+          commit-decoration-style = bold yellow box ul
+          file-style = bold yellow ul
+          file-decoration-style = none
+          hunk-header-decoration-style = cyan box ul
+
+      [delta "line-numbers"]
+          line-numbers-left-style = cyan
+          line-numbers-right-style = cyan
+          line-numbers-minus-style = 124
+          line-numbers-plus-style = 28
     #+END_SRC
 
 *** git commit template
