--- a/hammers/tmux/tmux.org
+++ b/hammers/tmux/tmux.org
@@ -112,7 +112,7 @@
       set -g @yank_selection_mouse 'clipboard'
 
       set -g @extrakto_split_size "15"
-      set -g @extrakto_split_direction "v"
+      set -g @extrakto_split_direction "a"
       set -g @extrakto_copy_key "tab"      # use tab to copy to clipboard
       set -g @extrakto_insert_key "enter"  # use enter to insert selection
 
