feat(git): update git push to current branch

--- a/hammers/git/config.org
+++ b/hammers/git/config.org
@@ -63,7 +63,7 @@
       [pull]
               rebase = true
       [push]
-              default = simple
+              default = current
       [commit]
               template = ~/.config/git/commit.tmpl
       [credential]
